examples/test/testpolicy9469.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9469
  namespace: namespace364
spec:
  podSelector:
    matchLabels:
      key25: value2
      key17: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value21
      podSelector:
        matchLabels:
          key17: value5
          key33: value42
          key49: value22
